alignment issues on hero, nav moved to hero component

--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -2,12 +2,10 @@
   background: url("/images/hero.jpg") no-repeat center center fixed;
   background-size: cover;
   margin: auto;
-  height: 50vh;
+  height: 40vh;
   background-attachment: fixed;
   color: #ffffff;
   position: relative;
-  display: flex;
-  justify-content: center;
 }
 
 .herohome::before {
@@ -18,12 +16,6 @@
   width: 100%;
   height: 100%;
   background-color: #05101fab;
-}
-
-.container {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
 }
 
 @media (max-width: 960px) {
@@ -44,6 +36,5 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #05101fab;
   }
 }
